# yt_trend

./: .dockerignore  .gitignore  AGENTS.md  DEPLOY.md  DESIGN.md  Dockerfile  GEMINI.md  README.md  pyproject.toml
.github/workflows/: deploy.yml  test.yml
backend/: analyzer.py  auth.py  collector.py  database.py  main.py  models.py  scheduler.py
backend/routers/: auth_router.py  brief.py  keywords.py  topic.py  trending.py
backend/services/: brief_generator.py  topic_analyzer.py  translator.py  trend_clusterer.py  video_analyzer.py
config/: .env.example  settings.yaml
docs/: agent-taxonomy.md  codex-agent-onboarding.md  codex-multi-agent.md
frontend/: index.html  login.html
scripts/: lint-agents.sh  sync-agents.sh  sync-workspace-agents-to-projects.sh  validate-agents.sh
src/: cli.py  exporter.py  filter.py
src/fetcher/: yt_api.py  yt_search.py  ytdlp.py
tests/: test_api.py
